fixed recipe card styles on small screens

--- a/public/styles/recipe.css
+++ b/public/styles/recipe.css
@@ -42,11 +42,8 @@ img {
   display: flex;
   flex-direction: column;
   box-shadow: 0 0 88px 0 rgba(0, 0, 0, 0.1607843137254902);
-  overflow: hidden;
-  top: 50%;
-  right: 50%;
-  bottom: 50%;
-  left: 50%;
+  overflow: auto;
+  inset: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
   transition: 0.7s;
@@ -224,7 +221,8 @@ img {
 
 @media (max-width: 500px) {
   .ft-recipe {
-    width: 360px;
+    width: 90%;
+    height: 85%;
   }
 
   .ft-recipe .ft-recipe__content .content__header .recipe-details .recipe-details-item .value {
